2008-11-28  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-task-manager.c (HD_KEY_FILE_DESKTOP_KEY_TRANSLATION_DOMAIN):
	Use X-Text-Domain.

2008-11-27  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/changelog: Update changelog.

2008-11-27  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-applet-manager.c (items_configuration_loaded_cb): Only show
	  not yet selected applets in dialog.
	  (delete_event_cb): Remove applet from configuration if it is closed,
	  which means removed from Home.
	  (plugin_added_cb, plugin_removed_cb, run_idle, hd_applet_manager_init,
	  hd_applet_manager_install_applet, hd_applet_manager_remove_applet):
	  Use only one plugin manager to load applets and manage the applets
	  on Home.
	* src/hd-hildon-home-dbus.c (hd_hildon_home_dbus_show_edit_menu): Only
	  show menu item if list of applets is not empty.
	* src/hildon-home.c (load_plugins_idle, main): Move plugin manager to
	  load applets to HDAppletManager.

2008-11-26  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-task-shortcut.c (hd_task_shortcut_init): Update layout.

2008-11-26  Jan Arne Petersen  <jpetersen@openismus.com>

	* configure.ac: Increase version.

	* debian/changelog: Add new entry for next release.

2008-11-26  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-bookmark-manager.c: Store label/icon/URL in GConf for
	bookmark shortcuts.

	* src/hd-bookmark-shortcut.c: Update layout according to new layout
	spec. Load label/icon/URL from GConf.

	* src/hd-hildon-home-dbus.c (hd_hildon_home_dbus_show_edit_menu): Only
	show the "Add bookmark" menu item when a bookmark is available.

	* src/hildon-home.c (main): Create a HDBookmarkManager instance here.

2008-11-25  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-add-task-dialog.c (hd_add_task_dialog_dispose,
	  hd_add_task_dialog_init): Fix dialog title. Use GtkTreeModel instead
	  of GtkListStore.

	* src/hd-hildon-home-dbus.c (manage_views_clicked_cb,