@@ -1,6 +1,6 @@
 hildon-home (0.3.0~unreleased) unstable; urgency=low
 
-  * Update support for managing applets. Fixes NB92206
+  * Update support for managing applets. Fixes NB#92206, NB#93932
   * Update support for managing task shortcuts. Fixes NB#93164
   * Update support for bookmark shortcuts. Store and load bookmark data
     in/from GConf.
